# rust-esp32c3-examples

./: .gitignore  LICENSE  README.md  esp32-c3-super-mini-tht.fzpz  flake.nix
HC-SR04/: README.md  Sketch.fzz
HC-SR04/src/: main.rs
VL53L0X/: Cargo.toml  README.md  Sketch.fzz
VL53L0X/.cargo/: config.toml
VL53L0X/src/: async_vl53l0x.rs  main.rs
analog/: Sketch.fzz
analog/src/: main.rs
detect-led/: Cargo.toml  README.md
detect-led/src/: main.rs
digital/: README.md  util.rs
digital/src/: main.rs
external-led-control/: Cargo.toml  README.md  sdkconfig.defaults
external-led-control/src/: action.rs  async_timeout.rs  ble_interface.rs  button_interface.rs  interface.rs  main.rs  stdin.rs  stdin_interface.rs  timer_stream.rs
ir-emitter-receiver/: README.md
ir-emitter-receiver/analog/: Cargo.toml  README.md  sdkconfig.defaults
ir-emitter-receiver/analog/.cargo/: config.toml
ir-emitter-receiver/analog/src/: main.rs
ir-emitter-receiver/digital/: Sketch.fzz
ir-emitter-receiver/digital/src/: main.rs
ir-remote/: Cargo.toml  README.md  Sketch.fzz
ir-remote/.cargo/: config.toml
ir-remote/src/: main.rs
max7219/: Cargo.toml  README.md  sdkconfig.defaults
max7219/src/: main.rs
microsd/: Cargo.toml  Micro_SD_card_reader.fzpz  README.md  Sketch.fzz
microsd/src/: main.rs
no-std-led/: Cargo.toml  espflash.patch  flake.nix
no-std-led/.cargo/: config.toml
no-std-led/src/: main.rs
nvs-led/src/: main.rs
oled-display/: Cargo.toml  README.md
oled-display/.cargo/: config.toml
oled-display/src/: main.rs
rc522/: Cargo.toml  README.md  Sketch.fzz
rc522/.cargo/: config.toml
rc522/src/: main.rs
sensor-connect/: Cargo.toml  README.md
sensor-connect/common/: Cargo.toml
sensor-connect/common/src/: distance_data.rs  ir_data.rs  lib.rs
sensor-connect/esp32c3/: Cargo.toml  rust-toolchain.toml  sdkconfig.defaults
sensor-connect/esp32c3/src/: ble_on_characteristic.rs  const_characteristics.rs  distance_characteristic.rs  get_short_name.rs  info.rs  ir_characteristic.rs  ir_sensor.rs  main.rs  passkey_characteristic.rs  process_stdin.rs  short_name_characteristic.rs  subscribable3.rs  vl53l0x_sensor.rs
sensor-connect/src/: async_vl53l0x.rs  ble_on_characteristic.rs  const_characteristics.rs  distance_characteristic.rs  info.rs  ir_characteristic.rs  ir_sensor.rs  main.rs  passkey_characteristic.rs  process_stdin.rs  short_name_characteristic.rs  stdin.rs  subscribable2.rs  validate_short_name.rs  vl53l0x_sensor.rs
sensor-connect/web/: Cargo.toml  README.md  cspell.json  flake.nix  index.html  netlify.toml  package-lock.json  package.json  rust-toolchain.toml  webpack.config.js
sensor-connect/web/js/: index.jsx  register-sw.js
sensor-connect/web/src/: app.rs  ble_connection.rs  connect_button.rs  connection.rs  connection_component.rs  connection_enum.rs  connection_options.rs  connection_type.rs  counter.rs  lib.rs  readable_stream.rs  usb_connection.rs
sensor-connect/web/src/ble_connection/: ble_bool_serializer.rs  ble_characteristic.rs  ble_serializer.rs  ble_string_serializer.rs  ble_u32_serializer.rs  distance_data_serializer.rs  get_characteristic.rs  get_service.rs  get_short_name_characteristic.rs  ir_data_serializer.rs
sensor-connect/web/src/connection_component/: ble_on_component.rs  distance_component.rs  ir_component.rs  name_component.rs  passkey_component.rs  set_name.rs  set_passkey.rs
sensor-connect/web/src/usb_connection/: ble_on_messenger.rs  distance_data_messenger.rs  message_writer.rs  name_messenger.rs  passkey_messenger.rs  usb_characteristic.rs  usb_characteristic_messenger.rs
smart-power-button/: Cargo.toml  README.md  Sketch.fzz
smart-power-button/KiCad PCB/: .gitignore  Smart Power Button.kicad_pcb  Smart Power Button.kicad_prl  Smart Power Button.kicad_pro  Smart Power Button.kicad_sch  fp-lib-table  sym-lib-table
smart-power-button/KiCad PCB/KiCad Assets/: 2-1586041-0.stp  2024-10-11_01-11-34.kicad_sym  CONN_2-1586041-0_TYCO.kicad_mod  ESP32-C3_SUPERMINI.kicad_sym  EasyEDA.kicad_sym  MODULE_ESP32-C3_SUPERMINI.kicad_mod  RB141C1100.kicad_sym  RB141C1100.step  SW_RB141C1100.kicad_mod
smart-power-button/common/: Cargo.toml
smart-power-button/common/src/: lib.rs
smart-power-button/computer/: Cargo.toml
smart-power-button/computer/src/: apps.rs  config.rs  get_wakeup_reason.rs  lib.rs  power_down.rs  power_up.rs  retry_strategy.rs  samsung.rs  sound_system.rs  systemd_integration.rs  toggle_game_mode.rs  tv_data.rs
smart-power-button/esp/: Cargo.toml  README.md  build.rs  example.env  rust.tga  sdkconfig.defaults
smart-power-button/esp/.cargo/: config.toml
smart-power-button/esp/src/: bluetooth_wake.rs  bluetooth_wakeup_devices.rs  button.rs  gpio_pins_vec.rs  handle_request.rs  http_content_type.rs  hyper_util.rs  main.rs  power_io.rs  run_server.rs  serve_static.rs  serve_websocket.rs  string_to_error.rs  value_channel.rs  watch_input.rs  watch_power.rs  wifi_loop.rs
smart-power-button/esp/src/handle_request/: handle_bluetooth_wakeup_devices.rs  handle_wakeup_reason.rs  mod.rs  serve_static.rs
smart-power-button/test/: Cargo.toml  README.md  flake.nix
smart-power-button/test/src/: main.rs
smart-power-button/web/: Cargo.toml  example.env  index.html
smart-power-button/web/src/: main.rs  stream_render_ext.rs  web_socket_ext.rs
usb-echo/: Cargo.toml  README.md  sdkconfig.defaults
usb-echo/.cargo/: config.toml
usb-echo/src/: main.rs
web-serial/: .eslintrc  README.md  package-lock.json  package.json  tsconfig.json
web-serial/src/: App.tsx  index.tsx
