[package]
name = "no-std-led"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "no-std-led"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
defmt = "1.0.1"
embassy-executor = "0.9.1"
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = "0.5.0"
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
esp-backtrace = { version = "0.18.1", features = ["defmt", "panic-handler"] }
esp-bootloader-esp-idf = "0.4.0"
esp-hal = { version = "1.0.0", features = ["defmt", "unstable"] }
esp-println = { version = "0.16.1", features = ["defmt-espflash"] }
esp-rtos = { version = "0.2.0", features = ["embassy"] }
futures = { version = "0.3.31", default-features = false }

[features]
default = ["esp32c3"]
esp32c3 = ["esp-hal/esp32c3", "esp-rtos/esp32c3", "esp-backtrace/esp32c3", "esp-println/esp32c3", "esp-bootloader-esp-idf/esp32c3"]
