[package]
name = "sensor-connect"
version = "0.1.0"
authors = [
  "Rajas Paranjpe <52586855+ChocolateLoverRaj@users.noreply.github.com>",
]
homepage = "https://github.com/ChocolateLoverRaj/rust-esp32c3-examples/tree/main/sensor-connect"
repository = "https://github.com/ChocolateLoverRaj/rust-esp32c3-examples"
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
  "esp-idf-svc/embassy-sync",
  "esp-idf-svc/critical-section",
  "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
esp-idf-sys = { version = "0.34", features = ["binstart"] }
esp-idf-hal = "0.43"
esp-println = { version = "0.3.1", features = ["esp32c3"] }
libc = "0.2.152"
esp32-nimble = { git = "https://github.com/taks/esp32-nimble", rev = "307a6db4f0865e4b70c79e43d1397654793f0c7e" }
random = "0.14.0"
hex = "0.4.3"
futures = "0.3.30"
serde = "1.0.195"
serde_json = "1.0.111"
slab = "0.4.9"
vl53l0x = "0.3.1"
nb = "1.1.0"

[dependencies.hal]
version = "0.2"
package = "embedded-hal"

[build-dependencies]
embuild = "0.31.3"
