# You must change these to your own details.
[package]
name = "sensor-connect-web"
version = "0.1.0"
authors = [
  "Rajas Paranjpe <52586855+ChocolateLoverRaj@users.noreply.github.com>",
]
homepage = "https://github.com/ChocolateLoverRaj/rust-esp32c3-examples/tree/main/sensor-connect"
repository = "https://github.com/ChocolateLoverRaj/rust-esp32c3-examples"
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.45"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.2", optional = true }
console_error_panic_hook = "0.1.5"
wasm-react = "0.5.0"
common = { path = "../common" }
wasm-bindgen-futures = "0.4.41"
wasm-bindgen-test = "0.3.34"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = [
  "console",
  "Navigator",
  "Window",
  "Bluetooth",
  "RequestDeviceOptions",
  "BluetoothDevice",
  "BluetoothRemoteGattServer",
  "BluetoothRemoteGattCharacteristic",
  "ReadableStream",
  "ReadableStreamDefaultReader",
  "Serial",
  "SerialPort",
  "SerialOptions",
  "WritableStream",
  "WritableStreamDefaultWriter",
]

# These crates are used for running unit tests.
[dev-dependencies]
js-sys = "0.3.22"
wasm-bindgen-futures = "0.4.34"
