# You must change these to your own details.
[package]
name = "sensor-connect-web"
version = "0.1.0"
authors = [
  "Rajas Paranjpe <52586855+ChocolateLoverRaj@users.noreply.github.com>",
]
homepage = "https://github.com/ChocolateLoverRaj/rust-esp32c3-examples/tree/main/sensor-connect"
repository = "https://github.com/ChocolateLoverRaj/rust-esp32c3-examples"
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[dependencies]
wasm-bindgen = "0.2.45"
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
console_error_panic_hook = "0.1.5"
common = { path = "../common" }
wasm-bindgen-futures = "0.4.41"
wasm-bindgen-test = "0.3.34"
leptos = { version = "0.6.5", features = ["csr", "nightly"] }
futures-core = "0.3.30"
futures = "0.3.30"
serde_json = "1.0.113"
ansitok = "0.2.0"
nom = "7.1.3"
stream-broadcast = { git = "https://github.com/ChocolateLoverRaj/stream-broadcast-rs", branch = "broadcast-unlimited", version = "0.2.2" }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = [
  "Bluetooth",
  "RequestDeviceOptions",
  "BluetoothDevice",
  "BluetoothRemoteGattServer",
  "BluetoothRemoteGattService",
  "BluetoothRemoteGattCharacteristic",
  "console",
  "Navigator",
  "ReadableStream",
  "ReadableStreamDefaultReader",
  "Serial",
  "SerialPort",
  "SerialOptions",
  "TextDecoder",
  "Window",
  "WritableStream",
  "WritableStreamDefaultWriter",
]

[dependencies.try-again]
default-features = false
version = "0.1.1"
git = "https://github.com/ChocolateLoverRaj/try-again"
branch = "async-web"
features = ["async-web"]
