[package]
name = "smart-power-button-computer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
chrono = "0.4.38"
futures-util = "0.3.30"
ir-remote = { version = "0.2.0", features = ["serde"] }
native-tls = "0.2.12"
postcard = { version = "1.0.8", default-features = false, features = [
    "alloc",
    "use-std",
] }
reqwest = { version = "0.12.5", features = ["trust-dns"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
smart-power-button-common = { version = "0.1.0", path = "../common" }
tokio = { version = "1.38.1", features = ["full"] }
tokio-rustls = "0.26.0"
tokio-tungstenite = { version = "0.23.1", features = [
    "native-tls",
    "tokio-rustls",
] }
try-again = "0.1.1"
url = "2.5.2"
wakey = "0.3.0"
wol-rs = "1.0.1"
zbus = "4.4.0"
zbus_systemd = { version = "0.25600.0", features = ["login1", "systemd1"] }
