[package]
name = "smart-power-button-web"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
async_ui_web = { git = "https://github.com/wishawa/async_ui" }
smart-power-button-common = { version = "0.1.0", path = "../common" }
futures = "0.3.30"
gloo-console = "0.3.0"
postcard = { version = "1.0.8", default-features = false, features = ["alloc"] }
stream-broadcast = "0.3.0"
tokio = { version = "1.38.0", default-features = false, features = ["sync"] }
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["WebSocket", "console"] }
ws_stream_wasm = "0.7.4"
dotenvy_macro = { git = "https://github.com/aidenfarley/dotenvy", rev = "3fd4af6df81580738c04d9688294d3f0110b4ef5", version = "0.15.7" }
console_error_panic_hook = "0.1.7"
